--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,15 @@ body {
   font-family: Roboto, sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
+ul {
+  list-style: none;
+}
+
+/* логотип */
 .logo a {
   font-family: Raleway;
   font-style: 400px;
@@ -27,4 +36,125 @@ body {
   font-weight: 500;
   font-size: 14px;
   color: #000000;
+}
+
+.footer {
+  width: 1600px;
+  height: 252px;
+  left: 0px;
+  top: 2097px;
+  background: #2f303a;
+}
+
+.name-logo-footer-1 {
+  color: #2196f3;
+}
+
+.name-logo-footer-2 {
+  color: #ffffff;
+}
+
+.address {
+}
+
+.navigation {
+}
+
+.location {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: #ffffff;
+}
+
+.email {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.phone-number {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.page-header {
+}
+
+.page-hero {
+  background-color: #2f303a;
+}
+
+.motto {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 44px;
+  color: #ffffff;
+}
+
+.button-motto {
+  font-family: Roboto;
+  font-style: 400px;
+  font-weight: 700px;
+  font-size: 16px;
+  color: #ffffff;
+}
+
+.button-motto-bg {
+  /*position: absolute;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;*/
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.features {
+  background-color: #ffffff;
+}
+
+.features-1 {
+}
+
+.features-2 {
+}
+
+.features-3 {
+}
+
+.features-4 {
+}
+
+.heading-features {
+  font-family: Roboto;
+  font-style: 400px;
+  font-weight: 700px;
+  font-size: 14px;
+  color: #212121;
+}
+
+.paragraph-features {
+  font-family: Roboto;
+  font-style: 400px;
+  font-weight: 400px;
+  font-size: 14px;
+  color: #757575;
+}
+
+.heading-what-are-we-doing {
+  font-family: Roboto;
+  font-style: 400px;
+  font-weight: 700px;
 }
