home-work-02-project

--- a/css/style.css
+++ b/css/style.css
@@ -238,3 +238,33 @@ ul {
   font-size: 16px;
   line-height: 26px;
 }
+
+.project {
+  background-color: #e5e5e5;
+}
+
+.heading-project {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 36px;
+  /* identical to box height, or 200% */
+
+  letter-spacing: 0.06em;
+
+  color: #212121;
+}
+
+.paragraph-project {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  /* identical to box height, or 187% */
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
