--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@ ul {
   color: #2196f3;
 }
 
+.nav-list a:hover,
+.nav-list a:focus {
+  color: #2196f3;
+}
+
 .nav-list a {
   font-weight: 500;
   font-size: 14px;
@@ -195,6 +200,20 @@ ul {
 }
 
 .filters {
+}
+
+.button-filter-1 {
+  /* Rectangle 10 
+  position: absolute;
+  width: 73px;
+  height: 38px;
+  left: 495px;
+  top: 174px;*/
+  background: #2196f3;
+  /* shadow-middle */
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .filter-1 {
