--- a/css/style.css
+++ b/css/style.css
@@ -1,298 +1,70 @@
-body {
-  background-color: #ffffff;
-  color: #000000;
-  font-family: Roboto, sans-serif;
-}
+/* цвет основного текста #212121*/
+
+/* вторичний цвет текста color: #757575; */
+
+/* белый color: #FFFFFF; */
+
+/* акцент color: #2196F3; */
+
+/* вторичний цвет фона background: #F5F4FA; */
 
 :root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --logo-color: #000000;
+  --primary-text-color: #212121;
+  --title-text-color: #757575;
+  --acccent-color: #2196f3;
   --primary-bg-color: #ffffff;
-  --bg-color: #2f303a;
 }
 
-a {
-  text-decoration: none;
+body {
+  background-color: var(--primary-bg-color);
+  color: var(--primary-text-color);
 }
 
 ul {
   list-style: none;
 }
 
-/* логотип */
-.logo a {
-  font-family: Raleway;
-  font-style: 400px;
-  font-weight: 700px;
-  font-size: 26px;
-  line-height: 31px;
-  color: black;
+a {
+  text-decoration: none;
 }
 
-.name-logo {
-  color: #2196f3;
+.list a:hover,
+.list a:focus {
+  color: var(--acccent-color);
 }
 
-.nav-list a:hover,
-.nav-list a:focus {
-  color: #2196f3;
+.web {
+  color: var(--acccent-color);
 }
 
-.nav-list a {
-  font-weight: 500;
-  font-size: 14px;
-  color: #000000;
+/* site nav */
+
+.site-nav a {
+  color: var(--primary-text-color);
 }
 
-.nav-contacts a {
-  font-weight: 500;
-  font-size: 14px;
-  color: #000000;
+.site-nav .link {
+  color: var(--acccent-color);
 }
 
-.footer {
-  width: 1600px;
-  height: 252px;
-  left: 0px;
-  top: 2097px;
-  background: #2f303a;
+/* Section */
+
+.section {
+  color: var(--primary-text-color);
 }
 
-.name-logo-footer-1 {
-  color: #2196f3;
+/* Team */
+
+.team-list .title {
+  color: var(--primary-text-color);
 }
 
-.name-logo-footer-2 {
-  color: #ffffff;
+.button {
+  color: var(--primary-bg-color);
+  background-color: var(--acccent-color);
 }
 
-.address {
-}
-
-.navigation {
-}
-
-.location {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  color: #ffffff;
-}
-
-.email {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.phone-number {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 24px;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.page-header {
-}
-
-.page-hero {
-  background-color: #2f303a;
-}
-
-.motto {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 900;
-  font-size: 44px;
-  color: #ffffff;
-}
-
-.button-motto {
-  font-family: Roboto;
-  font-style: 400px;
-  font-weight: 700px;
-  font-size: 16px;
-  color: #ffffff;
-}
-
-.button-motto-bg {
-  /*position: absolute;
-  width: 200px;
-  height: 50px;
-  left: 700px;
-  top: 430px;*/
-  background: #188ce8;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+.button-link {
+  background: #f5f4fa;
   border-radius: 4px;
-}
-
-.features {
-  background-color: #ffffff;
-}
-
-.features-1 {
-}
-
-.features-2 {
-}
-
-.features-3 {
-}
-
-.features-4 {
-}
-
-.heading-features {
-  font-family: Roboto;
-  font-style: 400px;
-  font-weight: 700px;
-  font-size: 14px;
-  color: #212121;
-}
-
-.paragraph-features {
-  font-family: Roboto;
-  font-style: 400px;
-  font-weight: 400px;
-  font-size: 14px;
-  color: #757575;
-}
-
-.heading-what-are-we-doing {
-  font-family: Roboto;
-  font-style: 400px;
-  font-weight: 700px;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  color: #000000;
-}
-
-.our-team {
-  background-color: #f5f4fa;
-}
-
-.heading-our-team {
-  font-family: Roboto;
-  font-style: 400px;
-  font-weight: 700px;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
-  color: #000000;
-}
-
-.headign-team {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  color: #212121;
-}
-
-.paragraph-team {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
-  color: #757575;
-}
-
-.filters {
-}
-
-.button-filter-1 {
-  /* Rectangle 10 
-  position: absolute;
-  width: 73px;
-  height: 38px;
-  left: 495px;
-  top: 174px;*/
-  background: #2196f3;
-  /* shadow-middle */
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-}
-
-.filter-1 {
-  font-family: Roboto;
-  font-style: 400px;
-  font-weight: 500px;
-  font-size: 16px;
-  line-height: 26px;
-  /* identical to box height, or 162% */
-  color: #ffffff;
-}
-
-.filter-2 {
-  font-family: Roboto;
-  font-style: 400;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.filter-3 {
-  font-family: Roboto;
-  font-style: 400;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.filter-4 {
-  font-family: Roboto;
-  font-style: 400;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.filter-5 {
-  font-family: Roboto;
-  font-style: 400;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.project {
-  background-color: #e5e5e5;
-}
-
-.heading-project {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 18px;
-  line-height: 36px;
-  /* identical to box height, or 200% */
-
-  letter-spacing: 0.06em;
-
-  color: #212121;
-}
-
-.paragraph-project {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 30px;
-  /* identical to box height, or 187% */
-
-  letter-spacing: 0.03em;
-
-  color: #757575;
 }
