--- a/css/style.css
+++ b/css/style.css
@@ -15,11 +15,15 @@
   --primary-bg-color: #ffffff;
   --primary-white-color: #ffffff;
   --primary-bt-color: #f5f4fa;
+  --primary-bg-hero-color: #2f303a;
 }
 
 body {
   background-color: var(--primary-bg-color);
   color: var(--primary-text-color);
+
+  font-family: roboto, sans-serif;
+  letter-spacing: 0.03em;
 }
 
 ul {
@@ -41,9 +45,18 @@ a {
 
 .logo {
   color: var(--primary-text-color);
+  font-family: Raleway, sans-serif;
+
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
 /* Логотип Футер */
+
+.footer {
+  background-color: var(--primary-bg-hero-color);
+}
 
 .web-footer {
   color: var(--acccent-color);
@@ -53,7 +66,30 @@ a {
   color: var(--primary-white-color);
 }
 
+.location.link {
+  color: var(--primary-white-color);
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
+.footer-contacts.link {
+  color: rgba(255, 255, 255, 0.6);
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+}
+
 /* site nav */
+
+.site-nav {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+}
 
 .site-nav a {
   color: var(--primary-text-color);
@@ -64,25 +100,89 @@ a {
 }
 
 .auth-nav a {
-  color: var(--title-text-color);
+  color: var(--primary-text-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
-/* Section */
+/* Hero */
+
+.hero {
+  background-color: var(--primary-bg-hero-color);
+}
+
+.hero-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  color: var(--primary-white-color);
+}
+
+/* main */
 
 .section {
+}
+
+.section-title {
   color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+
+.features-title {
+  color: var(--primary-text-color);
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.features-text {
+  color: var(--title-text-color);
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
 }
 
 /* Team */
 
-.team-list .title {
+.team-title {
   color: var(--primary-text-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+}
+
+.team-text {
+  color: var(--title-text-color);
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.19;
 }
 
 /* Button */
 
 .button {
   color: var(--primary-text-color);
+  background-color: var(--primary-bt-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+}
+
+.button:hover {
+  color: var(--acccent-color);
   background-color: var(--primary-white-color);
 }
 
@@ -94,4 +194,39 @@ a {
 .button.secondary {
   color: var(--primary-text-color);
   background-color: var(--primary-bt-color);
+}
+
+.button.hero {
+  color: var(--primary-white-color);
+  background-color: var(--acccent-color);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+/* Портфолио Main */
+
+.project {
+}
+
+.project-title {
+  color: var(--primary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+
+  letter-spacing: 0.06em;
+}
+
+.project-text {
+  color: var(--title-text-color);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.9;
+
+  letter-spacing: 0.03em;
 }
