--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,7 @@ a {
   line-height: 1.36;
   text-align: center;
   color: var(--primary-white-color);
+  text-transform: uppercase;
 }
 
 /* main */
